# pyright-analysis

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/: renovate.json
.github/scripts/: attestations_report.jq  convert_attestations_to_sigstore.py  github_attestations.sh
.github/workflows/: ci-cd.yml  codeql.yml  python-linting.yml  python-tests.yml
changelog.d/: 1.bugfix.md  14.feature.md  2.bugfix.md  24.bugfix.md  26.feature.md  3.bugfix.md  42.bugfix.md  471.bugfix.md  474.doc.md
src/pyright_analysis/: cli.py  schema.py  treemap.py
tests/: conftest.py  test_cli.py  test_schema.py  test_treemap.py  test_utils.py
tests/__snapshots__/: test_schema.ambr  test_treemap.ambr
